# shufflr

./: .travis.yml  README.md  package-lock.json  package.json  shufflr.js
.github/workflows/: js-ci-cd.yml  npmpublish.yml  rust-ci-cd.yml  shufflr-cargo-ci-cd.yml  shufflr_ci-cd.yml
js/: README.md  package-lock.json  package.json
rust/: Cargo.toml  README.md
rust/src/: lib.rs
test/: test.js
