[package]
name = "shufflr"
version = "0.1.0"
authors = ["Héctor Tortosa <hectortosa@icloud.com>"]
description = "Shuffle a lists using Fisher-Yates algorithm"
repository = "https://github.com/hectortosa/shufflr"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }